Fix display on mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,10 @@ $images: "/images/ruby.jpg", "/images/amber.jpg", "/images/emerald.jpg", "/image
 $animation-duration: 30s;
 
 // GENERAL
+html {
+    width: 100vw;
+    height: 100vh;
+}
 body {
     min-height: 100vh;
     max-height: 100vh;
@@ -43,7 +47,7 @@ body {
     font-family: Whitney,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
     // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: hsla(0, 0%, 100%, .6);
-    overflow-x: auto;
+    overflow: hidden;
     @include pseudo(after, before) {
         content: "";
         position: fixed;
@@ -107,6 +111,7 @@ body {
         @include display-flex;
         @include flex-direction(row);
         margin: 0 auto;
+        overflow-x: auto;
     }
     // SIDEBAR
     .side-bar {
@@ -146,14 +151,13 @@ body {
     }
     // CONTENT
     .content {
-        // width: 740px;
+        min-width: 300px;
         @include display-flex;
         @include flex-direction(column);
         @include flex-grow(1);
         margin: 10vh 40px;
         padding: 20px;
         border-radius: 5px;
-        overflow-y: auto;
         .title {
             @include cycle-animate(main-color);
             font-size: 30px;
